--- a/client/src/component/Navbar/Navbar.css
+++ b/client/src/component/Navbar/Navbar.css
@@ -18,7 +18,7 @@ header{
     justify-content: space-around;
     align-items: center;
     padding: 30px 10%;
-    background-color:#6F6F6F;
+    background:#6F6F6F;
 }
 .nav_link{
     list-style: none;
