--- a/client/src/component/Footer/Footer.css
+++ b/client/src/component/Footer/Footer.css
@@ -9,7 +9,7 @@ footer{
     position: relative;
     width: 100%;
     min-height: 80px;
-    background-color: #3586ff;
+    background-color: #2183a2;
     padding: 20px 50px;
     justify-content: center;
     align-items:center;
