--- a/client/src/component/HomePage/HomePage.css
+++ b/client/src/component/HomePage/HomePage.css
@@ -7,7 +7,7 @@ body{
 }
 h3{
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
     margin: 0;
     padding-top: 10px;
 }
@@ -23,12 +23,11 @@ a{
     margin: 50px 0;
 }
 .content{
-    width: 20%;
+    width: 14%;
     margin: 15px;
     box-sizing: border-box;
     float: left;
     text-align: center;
-    border-radius: 20px;
     cursor: pointer;
     padding-top: 10px;
     box-shadow: 0 14px 28px rgba(0,0,0,0),
@@ -42,37 +41,38 @@ a{
     transform: translate(0px, -8px);
 }
 img{
-    width: 250px;
+    width: 100%;
     height: 150px;
     text-align: center;
     margin: 0 auto;
     display: block;
-    border-top-right-radius: 15px;
-    border-top-left-radius: 15px;
+
 }
 p{
-    text-align: center;
-    color: #b2bec3;
-    padding-top: 0 8px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 100%;
+    white-space: nowrap;
+    font-weight: 400;
 }
 h6{
-    font-size: 26px;
-    text-align: center;
+    font-size: 15px;
     color:#222f3e;
-    margin: 0;
+    margin-left: 13%;
+
 }
 ul{
     list-style: none;
     display: flex;
-    justify-content: center;
-    align-items:center;
+    
     padding-top: 0;
 }
 li{
     padding: 5px;
 }
 .fa{
-    font-size: 26px;
+
+    font-size: 10px;
     transition: .4s;
     color:black;
 }
@@ -85,16 +85,22 @@ li{
 }
 button{
     text-align: center;
-    font-size: 24px;
+    font-size: 15px;
     color: #fff;
-    width: 100%;
-    padding: 15px;
+    width:50%;
+    float: right;
+    padding: 10px;
     border: 0;
     outline: none;
     cursor: pointer;
     margin-top: 5px;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
+}
+.price-more{
+    width: 100%;
+    display: flex;  
+    justify-content: space-between;
+    align-items:center;
+    text-align: center;
 }
 .buy-1{
     background-color: #2183a2;
@@ -110,13 +116,23 @@ button{
 }
 @media (max-width:1000px) {
     .content{
-        width: 45%;
+        width: 25%;
 
     }
 }
 @media (max-width:750px) {
     .content{
-        width: 100%;
+        width: 50%;
         
     }
+}
+
+/* Search bar */
+
+.search_bar{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0;
 }
