--- a/client/src/component/Navbar/Navbar.css
+++ b/client/src/component/Navbar/Navbar.css
@@ -18,18 +18,52 @@ header{
     justify-content: space-around;
     align-items: center;
     padding: 30px 10%;
-    background:#6F6F6F;
+    background:#2183a2;
 }
 .nav_link{
     list-style: none;
+    margin-top:2.3%;
 }
 .nav_link li{
     display: inline-block;
     padding: 0px 20px;
 }
 .nav_link li a {
+    font-size: 20px;
     transition: all 0.3s ease 0s;
 }
 .nav_link li a:hover{
     color: #0088a9 ; 
-}
+} 
+  .search-container{
+    width: 490px;
+    display: block;
+    margin: 0 auto;
+  }
+  
+  input#search-bar{
+    margin: 0 auto;
+    width: 100%;
+    height: 35px;
+    padding: 0 20px;
+    font-size: 1rem;
+    border: 1px solid #D0CFCE;
+    outline: none;
+   }
+  .button{
+    margin: 0 auto;
+    width: 100%;
+    height: 35px;
+    padding: 0 20px;
+    font-size: 1rem;
+    border: 1px solid #D0CFCE;
+    outline: none;
+  }
+  .fa-solid{
+    color:black;
+  }
+
+  
+  
+  
+  
