--- a/client/src/component/Catalog/Catalog.css
+++ b/client/src/component/Catalog/Catalog.css
@@ -1,30 +1,17 @@
 
-.catalogs{
-    display: flex;
-    flex-wrap: wrap;
-    width: 80%;
-    justify-content: center;
-    align-items: center;
-    margin-left: 5%;
-    margin-top: 15px;
+.catalog{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-column-gap: 10rem;
+    grid-row-gap: 2rem;
 }
-.block{
-    width: 10%;
-    margin-left: 15%;
-    box-sizing: border-box;
-    float: left;
-    text-align: center;
-    cursor: pointer;
-    padding-top: 10px;    
-    transition: .4s;
-    background: #f2f2f2;
+.cart{
+    background: #f5f5f5;
+    box-shadow: 5px 5px 7px rgba(0,0,0, 0.4)
 }
-.img{
-    width: 90px;
-    height: 90px;
-    text-align: center;
-    margin: 0 auto;
-    display: block;
-    border-radius:15px;
-    margin-bottom: 15px;
+.cart img{
+    width: 100%;
+    height: 80%;
+    margin: auto;
 }
