--- a/client/src/component/HomePage/HomePage.css
+++ b/client/src/component/HomePage/HomePage.css
@@ -1,134 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Vibur&display=swap');
 
-body{
-    margin: 0;
-    font-family:'Hammersmith One', sans-serif;
-    background-color: #f2f2f2;
-}
-h3{
-    text-align: center;
-    font-size: 20px;
-    margin: 0;
-    padding-top: 10px;
-}
-a{
-    text-decoration: none;
-}
-.gallery{
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    margin: 50px 0;
-}
-.content{
-    width: 14%;
-    margin: 25px;
-    box-sizing: border-box;
-    float: left;
-    text-align: center;
-    cursor: pointer;
-    padding-top: 10px;    
-    transition: .4s;
-    background: #f2f2f2;
-}
-.content:hover{
-    box-shadow:0 3px 6px rgba(0,0,0,0.16),
-    0 3px 6px rgba(0,0,0,0.23);
-    transform: translate(0px, -8px);
-}
-img{
-    width: 100%;
-    height: 150px;
-    text-align: center;
-    margin: 0 auto;
-    display: block;
-
-}
-p{
-    text-overflow: ellipsis;
-    overflow: hidden;
-    max-width: 100%;
-    white-space: nowrap;
-    font-weight: 400;
-}
-h6{
-    font-size: 15px;
-    color:#222f3e;
-    margin-left: 13%;
-
-}
-ul{
-    list-style: none;
-    display: flex;
-}
-li{
-    padding: 1px;
-}
-.fa{
-
-    font-size: 10px;
-    transition: .4s;
-    color:black;
-}
-.checked{
-    color:#ff9f43;
-}
-.fa:hover{
-    transform: scale(1.3);
-    transition: .6s;
-}
-button{
-    text-align: center;
-    font-size: 15px;
-    color: #fff;
-    width:50%;
-    float: right;
-    padding: 10px;
-    border: 0;
-    outline: none;
-    cursor: pointer;
-    margin-top: 5px;
-}
-.price-more{
-    width: 100%;
-    display: flex;  
-    justify-content: space-between;
-    align-items:center;
-    text-align: center;
-}
-.buy-1{
-    background-color: #2183a2;
-}
-.buy-2{
-    background-color: #3b3e6e;
-}
-.buy-3{
-    background-color: #0b0b0b;
-}
-.buy-4{
-    background-color: #ff9f43;
-}
-@media (max-width:1000px) {
-    .content{
-        width: 25%;
-
-    }
-}
-@media (max-width:750px) {
-    .content{
-        width: 50%;
-        
-    }
-}
-
-/* Search bar */
-
-.search_bar{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 50px 0;
+.carousel-inner{
+    height: 500px;
 }
