--- a/client/src/component/Navbar/Navbar.css
+++ b/client/src/component/Navbar/Navbar.css
@@ -1,69 +1,132 @@
-@import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Vibur&display=swap');
-*{
-    box-sizing: border-box;
-    margin: 0 ;
-    padding: 0;
-}
 
-li ,a {
-    font-family:'Hammersmith One', sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    color:white;
-    text-decoration: none;
-}
+
 header{
-    height: 50px;
+    width: 100%;
+    height: 80px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 30px 10%;
-    background:#2183a2;
+    padding: 0 10%;
+    background-color: #F5F5F5;
+    box-shadow: 0 0 7px rgba(0,0,0, 0.5);
 }
-.nav_link{
-    list-style: none;
-    margin-top:2.3%;
+form{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 42px;
+    background-color: #fff;
+    border-radius: 30px;
+    background-color: #FF6A00;
+    padding: 0 3px 0 1px;
 }
-.nav_link li{
-    display: inline-block;
-    padding: 0px 20px;
-}
-.nav_link li a {
-    font-size: 20px;
-    transition: all 0.3s ease 0s;
-}
-.nav_link li a:hover{
-    color: #000000 ; 
-} 
-  .search-container{
-    width: 490px;
-    display: block;
-    margin: 0 auto;
-  }
+form input{
+    width: 450px;
+    height: 95%;
+    border: none;
+    outline: none;
+    padding: 0 12px;
+    border-radius: 30px;
   
-  input#search-bar{
-    margin: 0 auto;
-    width: 100%;
-    height: 35px;
-    padding: 0 20px;
-    font-size: 1rem;
-    border: 1px solid #D0CFCE;
-    outline: none;
-   }
-  .button{
-    margin: 0 auto;
-    width: 100%;
-    height: 35px;
-    padding: 0 20px;
-    font-size: 1rem;
-    border: 1px solid #D0CFCE;
-    outline: none;
-  }
-  .fa-solid{
-    color:black;
-  }
+}
+form button {
+    width: 50px;
+}
+form button .bi-search{
+    font-size: 22px;
+    color: #fff;
+}
+header nav{
+    display: flex;
+    align-items: center;
+}
+header nav a {
+    text-decoration: none;
+    color: #222;
+    margin-right: 30px;
+}
+nav .bi-cart3{
+   font-size: 22px;
+   position: relative;
+   color: #222;
+}
+nav .bi-cart3 .cart_items{
+    position:absolute;
+    font-size: 12px;
+    top: -6px;
+    right: -9px;
+    background-color: coral;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-right: 2px;
+    color: #fff;
+}
 
-  
-  
-  
-  
+nav .bi-list{
+    display: none;
+}
+nav .bi-x-lg{
+    display: none;
+}
+
+@media (max-width: 1120px){
+    header{
+        padding: 0 2%;
+    }
+    form input{
+        width: 320px;
+    }
+    nav a {
+        margin-right: 15px;
+    }
+}
+@media (max-width: 769px){
+    header{
+        position: relative;
+    }
+    nav .nav_link{
+        position: absolute;
+        right: 0px;
+        top: 90px;
+        display: flex;
+        flex-direction: column;
+    }
+    nav .nav_link a{
+        margin-bottom: 15px;
+    }
+
+    form input{
+        width: 300px;
+    }
+    nav .bi-list{
+        display: block;
+        font-size: 22px;
+        margin-left: 10px;
+        cursor:  pointer;
+    }
+    nav .bi-x-lg{
+        display: block;
+        font-size: 22px;
+        margin-left: 10px;
+        cursor:  pointer;
+    }
+    
+}
+
+@media (max-width: 550px){
+    form{
+        height: 32px;
+    }
+    form input{
+        width: 200px;
+    }
+} 
+@media (max-width: 360px){
+    form input{
+        width: 150px;
+    }
+}
