--- a/client/src/component/Register/Sign.css
+++ b/client/src/component/Register/Sign.css
@@ -1,159 +1,122 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
-
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;	
-	font-family: Raleway, sans-serif;
-}
-.container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	min-height: 100vh;
-}
-
-.screen {		
-	background: linear-gradient(90deg, #56b6d3, #096d8b);		
-	position: relative;	
-	height: 600px;
-	width: 360px;	
-	box-shadow: 0px 0px 24px #5C5696;
-}
-
-.screen__content {
-	z-index: 1;
-	position: relative;	
-	height: 100%;
-}
-
-.screen__background {		
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	z-index: 0;
-	-webkit-clip-path: inset(0 0 0 0);
-	clip-path: inset(0 0 0 0);	
-}
-
-.screen__background__shape {
-	transform: rotate(45deg);
-	position: absolute;
-}
-
-.screen__background__shape1 {
-	height: 520px;
-	width: 520px;
-	background: #FFF;	
-	top: -50px;
-	right: 120px;	
-	border-radius: 0 72px 0 0;
-}
-
-.screen__background__shape2 {
-	height: 220px;
-	width: 220px;
-	background: #2183a2;	
-	top: -172px;
-	right: 0;	
-	border-radius: 32px;
-}
-
-.screen__background__shape3 {
-	height: 540px;
-	width: 190px;
-	background: linear-gradient(270deg, #42accc, #37aed3);
-	top: -24px;
-	right: 0;	
-	border-radius: 32px;
-}
-
-.screen__background__shape4 {
-	height: 400px;
-	width: 200px;
-	background: #6bdcff;	
-	top: 420px;
-	right: 50px;	
-	border-radius: 60px;
-}
-
 .login {
-	width: 320px;
-	padding: 30px;
-	padding-top: 156px;
+  position: relative;
+  top: 50px;
+  height: 600px;
+  width: 450px;
+  margin: auto;
+  padding: 60px 60px;
+  background: url(https://www.selbststaendig.de/sites/default/files/artikelbilder/onlineshop-einkaufswagen.jpg) no-repeat center
+    center #505050;
+  background-size: cover;
+  box-shadow: 0px 30px 60px -5px #000;
+}
+.register {
+  position: relative;
+  top: 50px;
+  height: 600px;
+  width: 450px;
+  margin: auto;
+  padding: 60px 60px;
+  background: url(https://i.ytimg.com/vi/fUfezMMKIYw/maxresdefault.jpg) no-repeat center
+    center #505050;
+  background-size: cover;
+  box-shadow: 0px 30px 60px -5px #000;
+}
+.signin {
+  background-color: #d3d3d3;
+  font-family: "Montserrat", sans-serif;
+  color: #fff;
+  font-size: 14px;
+  letter-spacing: 1px;
+}
+.link_to {
+  padding-left: 12px;
+  font-size: 22px;
+  text-transform: uppercase;
+  padding-bottom: 5px;
+  letter-spacing: 2px;
+  display: inline-block;
+  font-weight: 100;
+  text-decoration: none;
+}
+h2:first-child {
+  padding-left: 0px;
 }
 
-.login__field {
-	padding: 20px 0px;	
-	position: relative;	
+.active {
+  border-bottom: 2px solid #1161ed;
+  color: #f5f5f5;
 }
-
-.login__icon {
-	position: absolute;
-	top: 30px;
-	color: #4037eb;
+.nonactive {
+  color: #756c6c;
 }
-
-.login__input {
-	border: none;
-	border-bottom: 2px solid #D1D1D4;
-	background: none;
-	padding: 10px;
-	padding-left: 24px;
-	font-weight: 700;
-	width: 75%;
-	transition: .2s;
+.form-cart {
+  margin-top: 80px;
 }
-
-.login__input:active,
-.login__input:focus,
-.login__input:hover {
-	outline: none;
-	border-bottom-color: #6A679E;
+.title {
+  text-transform: uppercase;
+  font-size: 12px;
+  opacity: 0.4;
+  display: inline-block;
+  position: relative;
+  top: -48px;
+  transition: all 0.5s ease-in-out;
+  color:#fff;
 }
-
-.login__submit {
-	background: #fff;
-	font-size: 14px;
-	margin-top: 30px;
-	padding: 16px 20px;
-	border-radius: 26px;
-	border: 1px solid #D4D3E8;
-	text-transform: uppercase;
-	font-weight: 700;
-	display: flex;
-	align-items: center;
-	width: 100%;
-	color: #4C489D;
-	box-shadow: 0px 2px 2px #5C5696;
-	cursor: pointer;
-	transition: .2s;
+.text {
+  border: none;
+  width: 90%;
+  padding: 11px 20px;
+  display: block;
+  height: 15px;
+  border-radius: 20px;
+  background: rgba(233, 248, 255, 0.541);
+  border: 2px solid rgba(255, 255, 255, 0);
+  overflow: hidden;
+  margin-top: 15px;
+  transition: all 0.5s ease-in-out;
+  color: #fff;
 }
-
-.login__submit:active,
-.login__submit:focus,
-.login__submit:hover {
-	border-color: #6A679E;
-	outline: none;
+.text:focus {
+  outline: 0;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  background: rgba(0, 0, 0, 0);
 }
-
-.button__icon {
-	font-size: 24px;
-	margin-left: auto;
-	color: #7875B5;
+.text:focus + span {
+  opacity: 0.6;
 }
-
-.social-login {	
-	position: absolute;
-	height: 140px;
-	width: 100%;
-	text-align: center;
-	bottom: 0px;
-	right: 0px;
-	color: #fff;
+.signin {
+  background-color: #1161ed;
+  color: #fff;
+  width: 100%;
+  padding: 10px 20px;
+  display: block;
+  height: 39px;
+  border-radius: 20px;
+  margin-top: 30px;
+  transition: all 0.5s ease-in-out;
+  border: none;
+  text-transform: uppercase;
 }
-.social-login h3 {
-    margin-top: 50px;
+.signin:hover {
+  background: #4082f5;
+  box-shadow: 0px 4px 35px -5px #4082f5;
+  cursor: pointer;
+}
+.signin:focus {
+  outline: none;
+}
+hr {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  top: 85px;
+  position: relative;
+}
+.sign_to {
+  text-align: center;
+  display: block;
+  top: 120px;
+  position: relative;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.2);
 }
