--- a/client/src/component/Navbar/Navbar.css
+++ b/client/src/component/Navbar/Navbar.css
@@ -75,6 +75,9 @@ nav .bi-list{
 nav .bi-x-lg{
     display: none;
 }
+.logotp{
+    display: none;
+}
 
 @media (max-width: 1120px){
     header{
@@ -92,18 +95,39 @@ nav .bi-x-lg{
         position: relative;
     }
     nav .nav_link{
+       display: none;
+    }
+    .nav_active_link{
         position: absolute;
         right: 0px;
         border-radius: 5px;
         box-shadow:0 0 7px rgba(0,0,0, 0.5);
-        top: 90px;
+        top: 80px;
         display: flex;
         flex-direction: column;
-        background-color: #555;
+        background-color: lightseagreen;
+        color: #fff;
+        width: 200px;
+        height: 40vh;
         z-index: 999;
+        padding-top: 18px;
+    }
+    .logotp{
+        display: block;
+        text-align: center;
+        margin-bottom: 22px;
+    }
+    .nav_active_link a{
+        font-size: 22px;
+        margin-bottom: 12px;
+        text-align: end;
+        color: #fff;
+    }
+    .nav_active_link a:hover{
+       color:#FF6A00;
     }
     nav .nav_link a{
-        margin-bottom: 15px;
+        margin-bottom: 22px;
         z-index: 99999;
     }
 
